--- a/index.html
+++ b/index.html
@@ -16,13 +16,20 @@
   </head>
   <body class="pozadi">
     <section class="pozadi">
-      <nav class="navbar navbar-expand-lg bg-body-tertiary fixed-top">
+      
+      <nav class="navbar navbar-expand-lg navbar-light bg-body-tertiary fixed-top">
         <div class="container-fluid">
+
           <a class="navbar-brand" href="#kaves">Káves</a>
+
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+            data-bs-target="#navbarSupportedContent">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-        </li>
-        
+
         <li class="nav-item">
           <a class="nav-link" href="#onas">O NÁS</a>
         </li>
@@ -41,6 +48,7 @@
          <li class="nav-item">
           <a class="nav-link" href="#kavasebou">KÁVA SEBOU</a>
         </li>
+      </ul>
     </div>
   </div>
 </nav>
