--- a/index.html
+++ b/index.html
@@ -17,33 +17,36 @@
   </head>
   <body class="pozadi">
     <section class="pozadi">
-      <nav class="navbar navbar-expand-lg navbar-light bg-body-tertiary fixed-top">
-        <div class="container-fluid">
-
-    <a class="navbar-brand" href="#kaves">Káves</a>
-
-    <button class="navbar-toggler" type="button"
-            data-bs-toggle="collapse"
-            data-bs-target="#navbarSupportedContent">
+<nav class="navbar navbar-expand-lg navbar-light bg-body-tertiary fixed-top">
+  <div class="container-fluid">
+    <a class="navbar-brand" href="#kaves">KÁVES</a>
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
       <span class="navbar-toggler-icon"></span>
     </button>
-
-    <div class="collapse navbar-collapse" id="navbarSupportedContent">
-      <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-
-        <li class="nav-item"><a class="nav-link" href="#onas">O NÁS</a></li>
-        <li class="nav-item"><a class="nav-link" href="#program">VĚRNOSTNÍ PROGRAM</a></li>
-        <li class="nav-item"><a class="nav-link" href="#akce">AKCE</a></li>
-        <li class="nav-item"><a class="nav-link" href="#merch">MERCH</a></li>
-        <li class="nav-item"><a class="nav-link" href="#menu">NABÍDKA</a></li>
-        <li class="nav-item"><a class="nav-link" href="#kavasebou">KÁVA SEBOU</a></li>
-
+    <div class="collapse navbar-collapse" id="navbarNav">
+      <ul class="navbar-nav">
+        <li class="nav-item">
+          <a class="nav-link" href="#onas">O NÁS</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#program">VĚRNOSTNÍ PROGRAM</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#akce">AKCE</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#merch">MERCH</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#menu">NABÍDKA</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#kavasebou">KÁVA SEBOU</a>
+        </li>
       </ul>
     </div>
-
   </div>
 </nav>
-
     </section >
       <div id="kaves" class="obrazek"></div>
 
