--- a/index.html
+++ b/index.html
@@ -20,10 +20,10 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-body-tertiary fixed-top">
   <div class="container-fluid">
     <a class="navbar-brand" href="#kaves">KÁVES</a>
-    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent">
       <span class="navbar-toggler-icon"></span>
     </button>
-    <div class="collapse navbar-collapse" id="navbarNav">
+    <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav">
         <li class="nav-item">
           <a class="nav-link" href="#onas">O NÁS</a>
@@ -174,7 +174,17 @@
   function closeLightbox() {
     document.getElementById("lightbox").style.display = "none";
   }
+  document.querySelectorAll('.nav-link').forEach(item => {
+    item.addEventListener('click', () => {
+      const navbar = document.getElementById('navbarSupportedContent');
+      const bsCollapse = new bootstrap.Collapse(navbar, { toggle: false });
+      bsCollapse.hide();
+    });
+  });
 </script>
+
+  
+
 
    
     
