--- a/index.html
+++ b/index.html
@@ -14,6 +14,9 @@
         <link rel="stylesheet" href="css/styl.css"/>
         <link rel="stylesheet" href="css/lightbox.min.css">
         <script src="js/lightbox-plus-jquery.min.js"></script>
+
+        <link rel="icon" type="image/png" href="https://uploads.onecompiler.io/43ybv2fdn/44289uvgk/jojo.ico">
+
   </head>
   <body class="pozadi">
     <section class="pozadi">
