--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
           <a class="nav-link" href="#menu">NABÍDKA</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#kavasebou">KÁVA SEBOU</a>
+          <a class="nav-link" href="#kavasebou">KÁVA S SEBOU</a>
         </li>
       </ul>
     </div>
@@ -144,7 +144,7 @@
                onclick="openLightbox(this.src)">
           
           <div class="blok_middle_stin">
-            <h2 class="podnadpis">KÁVA SEBOU </h2>
+            <h2 class="podnadpis">KÁVA S SEBOU </h2>
             <p>Přijď si k nám se svým oblíbeným hrnečkem a odměníme tě 10% slevou na kávu!
               <br>Ještě nemáš svůj oblíbený hrneček? 
               <br>Rádi ti nabídneme náš originální, se kterým můžeš Káves hrdě reprezentovat kdekoliv.</p>
@@ -192,4 +192,5 @@
    
     
 </body>
+
 </html>
