--- a/index.html
+++ b/index.html
@@ -51,8 +51,9 @@
   </div>
 </nav>
     </section >
-      <div id="kaves" class="obrazek"></div>
-
+      <div id="kaves" class="obrazek">
+        <img src="https://uploads.onecompiler.io/43ybv2fdn/44289uvgk/Bez%20n%C3%A1zvu.jpg"> 
+      </div>
   <main class="obsah">
 
     <section  class="blok_middle">
@@ -194,3 +195,4 @@
 </body>
 
 </html>
+
