--- a/index.html
+++ b/index.html
@@ -51,8 +51,8 @@
   </div>
 </nav>
     </section >
-      <div id="kaves" class="obrazek">
-        <img src="https://uploads.onecompiler.io/43ybv2fdn/44289uvgk/Bez%20n%C3%A1zvu.jpg"> 
+      <div id="kaves">
+        <img class ="obrazek" src="https://uploads.onecompiler.io/43ybv2fdn/44289uvgk/Bez%20n%C3%A1zvu.jpg"> 
       </div>
   <main class="obsah">
 
@@ -195,4 +195,5 @@
 </body>
 
 </html>
+
 
