--- a/index.html
+++ b/index.html
@@ -51,9 +51,12 @@
   </div>
 </nav>
     </section >
+    <section>
       <div id="kaves">
-        <img class ="obrazek" src="https://uploads.onecompiler.io/43ybv2fdn/44289uvgk/Bez%20n%C3%A1zvu.jpg"> 
+        <img src="https://uploads.onecompiler.io/43ybv2fdn/44289uvgk/Bez%20n%C3%A1zvu.jpg"
+        class ="obrazek> 
       </div>
+    </section>   
   <main class="obsah">
 
     <section  class="blok_middle">
@@ -195,5 +198,6 @@
 </body>
 
 </html>
+
 
 
