--- a/index.html
+++ b/index.html
@@ -51,12 +51,8 @@
   </div>
 </nav>
     </section >
-    <section>
-      <div id="kaves">
-        <img src="https://uploads.onecompiler.io/43ybv2fdn/44289uvgk/Bez%20n%C3%A1zvu.jpg"
-        class ="obrazek> 
-      </div>
-    </section>   
+      <div id="kaves" class="obrazek"></div>
+
   <main class="obsah">
 
     <section  class="blok_middle">
@@ -198,6 +194,3 @@
 </body>
 
 </html>
-
-
-
