--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
   </div>
 </nav>
     </section >
-      <div id="kaves" class="obrazek"></div>
+      <div id="kaves" class="obrazek" url("https://uploads.onecompiler.io/43ybv2fdn/44289uvgk/Bez%20n%C3%A1zvu.jpg")></div>
 
   <main class="obsah">
 
@@ -194,3 +194,4 @@
 </body>
 
 </html>
+
