--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
   </div>
 </nav>
     </section >
-      <div id="kaves" class="obrazek" url("https://i.ibb.co/MkZwCWQ3/Chat-GPT-Image-26-11-2025-22-06-28.png")></div>
+      <div id="kaves" class="obrazek"></div>
 
   <main class="obsah">
 
@@ -194,6 +194,7 @@
 </body>
 
 </html>
+
 
 
 
