--- a/index.html
+++ b/index.html
@@ -51,8 +51,10 @@
   </div>
 </nav>
     </section >
-      <div id="kaves" class="obrazek"></div>
 
+<section>
+      <div id="kaves" class="obrazek"></div>
+</section>
   <main class="obsah">
 
     <section  class="blok_middle">
@@ -194,6 +196,7 @@
 </body>
 
 </html>
+
 
 
 
